[project]
name = "comfyui-ap-optical-flow"
description = "RAFT-based optical flow nodes for ComfyUI with robust batch/index handling, flow save/load, and inpaint crop/stitch support."
version = "0.1.2"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ["torchvision>=0.15"]

[project.urls]
Repository = "https://github.com/adampolczynski/ComfyUI_AP_OpticalFlow"

[tool.comfy]
PublisherId = "adampolczynski"
DisplayName = "AP Optical Flow"
Icon = ""
